Numerical Methods for Partial Differential Equations & Numerical Integration

--- a/11 - Numerical Methods for Partial Differential Equations & Numerical Integration.ipynb
+++ b/11 - Numerical Methods for Partial Differential Equations & Numerical Integration.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This part considers solution of PDEs by finite difference approximations and integration rules, as discussed in the course. As usual we start with some initializations."
+    "This final part considers solution of PDEs by finite difference approximations and integration rules, as discussed in the course. As usual we start with some initializations."
    ]
   },
   {
